# velib-data-airflow

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  data.dvc  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
.dvc/tmp/: lock
airflow/: airflow.cfg  airflow.db  start.sh
dags/: concatenate_yesterday_statuses_and_push_to_s3.py  push_all_raw_files_to_s3.py  velib_data_pipeline.py
data/station_info/: velib_station_info.csv  velib_station_info_enriched.csv
data/station_status/: raw.dvc
notebooks/: check_clean_completeness.ipynb  check_full_data.ipynb  check_raw_completeness.ipynb
src/: compile_clean_to_full.py  compile_yesterday_raw_files.py  enrich_velib_station_info.py  fetch_velib_data.py  push_all_data_to_s3.sh  sync_to_s3.sh  telegram_notifier.py
src/others/: compile_raw_to_clean.ipynb
tests/: check_completeness.ipynb  check_full_data.ipynb  compile_raw_to_clean.ipynb
