[project]
name = "velib-data-airflow"
version = "0.1.0"
description = ""
authors = [{name = "Allister Kohn", email = "allister.kohn@gmail.com"}]
dependencies = []

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
exclude = ["setup.py", "*.ipynb"]

[tool.ruff.lint]
extend-select = ["E501"]
ignore = ["E731"]

